<?xml version="1.0" encoding="utf-8"?>

<!-- TODO 1: Crear el diseño de la actividad principal -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fondo_rombo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/upc"
            android:layout_marginTop="48dp"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloapp"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed-light"
            android:textAllCaps="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresousuario"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:id="@+id/edtUsuario"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresopassword"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:id="@+id/edtClave"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp">

            <CheckBox
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="94dp"
                android:buttonTint="@color/black"
                android:text="@string/recordar"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnOlvido"
            android:layout_width="397dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:onClick="btnOlvidoClave"
            android:text="@string/olvido"
            android:textColor="@color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/btnIngresar"
            android:text="@string/ingresar"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/btnRegistrar"
            android:text="@string/registrar"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</ScrollView>






